// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with a count of 0 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     totalling 
    $2.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary with a count of 1 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary with a count of 2 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $2.00
  </h1>
</div>
`;
